--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,24 @@
 MODEL_ENDPOINTS:
-  gpt-4o: "https://tip-2025-poc-resource.cognitiveservices.azure.com/"
+  gpt-4.1-mini: "https://tip-2025-poc-resource.cognitiveservices.azure.com/"
   gpt-4.1: "https://tip-2025-poc-resource.cognitiveservices.azure.com/openai/v1/"
   Phi-4: "https://tip-2025-poc-resource.services.ai.azure.com/openai/v1/"
+  Phi-4-mini-instruct: "https://tip-2025-poc-resource.services.ai.azure.com/openai/v1/"
+
+
+MODEL_COST:
+  gpt-4.1-mini: 30  # Example cost, adjust as needed
+  gpt-4.1: 60  # Example cost, adjust as needed
+  Phi-4: 60  # Example cost, adjust as needed
+  Phi-4-mini-instruct: 60  # Example cost, adjust as needed
 
 MODEL_API_VERSION:
-  gpt-4o: "2024-12-01-preview"
+  gpt-4.1-mini: "2024-12-01-preview"
   gpt-4.1: "2024-12-01-preview"
   Phi-4: "2024-12-01-preview"
 
+
 MODEL_DEPLOYMENTS:
-  - gpt-4o
+  - gpt-4.1-mini
   - Phi-4
   - gpt-4.1
+  - Phi-4-mini-instruct
